# sse_example

./: Cargo.toml  README.md
src/: client.rs  main.rs
